[tool.poetry]
name = "flet-tasktrack"
version = "0.1.0"
description = ""
authors = ["milssky"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flet = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
